# rag-studio

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: custom_pipeline.py
rag_studio/examples/: chat_with_pdf.py  quickstart.py
rag_studio/rag_studio/: __init__.py  config.py
rag_studio/rag_studio/api/: app.py  models.py
rag_studio/rag_studio/api/routes/: documents.py  health.py  query.py
rag_studio/rag_studio/cli/: main.py
rag_studio/rag_studio/core/: __init__.py  chunker.py  embedder.py  generator.py  pipeline.py  retriever.py
rag_studio/rag_studio/loaders/: __init__.py  base.py  code_loader.py  pdf_loader.py  text_loader.py  web_loader.py
rag_studio/rag_studio/stores/: __init__.py  base.py  chroma_store.py  faiss_store.py
rag_studio/tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_embedder.py  test_generator.py  test_loaders.py  test_pipeline.py  test_retriever.py  test_stores.py
