[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-studio"
version = "0.1.0"
description = "A modular RAG (Retrieval-Augmented Generation) framework in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Camillo4eyes" }]
keywords = ["rag", "llm", "embeddings", "vector-store", "ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.2.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
rag-studio = "rag_studio.cli.main:app"

[project.urls]
Homepage = "https://github.com/Camillo4eyes/rag-studio"
Repository = "https://github.com/Camillo4eyes/rag-studio"
Issues = "https://github.com/Camillo4eyes/rag-studio/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
